--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,18 +27,18 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/add_post"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
-            android:layout_marginRight="30dp"
-            android:layout_marginBottom="30dp"
-            android:backgroundTint="@color/theme"
-            android:clickable="true"
-            app:srcCompat="@drawable/ic_post"
-            app:borderWidth="0dp"
-            app:elevation="10dp"/>
+<!--        <com.google.android.material.floatingactionbutton.FloatingActionButton-->
+<!--            android:id="@+id/add_post"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="bottom|end"-->
+<!--            android:layout_marginRight="30dp"-->
+<!--            android:layout_marginBottom="30dp"-->
+<!--            android:backgroundTint="@color/theme"-->
+<!--            android:clickable="true"-->
+<!--            app:srcCompat="@drawable/ic_post"-->
+<!--            app:borderWidth="0dp"-->
+<!--            app:elevation="10dp"/>-->
     </FrameLayout>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
