--- a/app/src/main/res/layout/card_post.xml
+++ b/app/src/main/res/layout/card_post.xml
@@ -11,14 +11,14 @@
         android:layout_height="wrap_content"
         android:paddingHorizontal="20dp"
         android:paddingTop="5dp">
-        
+
         <ImageView
             android:id="@+id/profile_picture"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_centerVertical="true"
-            android:src="@drawable/ic_default_profile_picture"
-            android:layout_marginRight="10dp" />
+            android:layout_marginRight="10dp"
+            android:src="@drawable/ic_default_profile_picture" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,16 +31,15 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Profile Name"
-                android:textColor="@color/cardview_dark_background"
-                android:textSize="20sp"/>
+                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/dept_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Department Name"
-                android:textColor="@color/cardview_dark_background"
-                android:textSize="15sp"/>
+
+                android:textSize="15sp" />
         </LinearLayout>
     </RelativeLayout>
 
@@ -51,6 +50,12 @@
         android:layout_below="@+id/profile_layout"
         android:paddingHorizontal="25dp"
         android:paddingBottom="5dp"
-        android:text="This is some random text about the post and jhvdhv hd cjhdb  dchxdbcj  hdbcdh chcdc cjsdhc kjdfv ksdj kjd  kdsj jskdv xdjv jxcx."/>
+        android:text="This is some random text about the post and jhvdhv hd cjhdb  dchxdbcj  hdbcdh chcdc cjsdhc kjdfv ksdj kjd  kdsj jskdv xdjv jxcx." />
 
+        <TextView
+            android:id="@+id/post_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="5.16 am . 13 Apr 22"
+            android:layout_alignEnd="@+id/post_content"/>
 </RelativeLayout>
