--- a/app/src/main/res/layout/fragment_campus.xml
+++ b/app/src/main/res/layout/fragment_campus.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#FFF">
 
     <TextView
+        android:id="@+id/empty_feed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Campus Fragment"
+        android:layout_gravity="center"
+        android:text="No post made yet"
         android:textSize="30sp"
-        android:layout_centerInParent="true" />
+        android:visibility="gone"/>
+    
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/content_recycler_campus"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_post"
@@ -27,4 +34,4 @@
         app:borderWidth="0dp"
         app:elevation="10dp"/>
 
-</RelativeLayout>
+</FrameLayout>
