--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="grey_post">#787878</color>
     <color name="theme">#FFC2A165</color>
+    <color name="green">#FF214F1C</color>
 </resources>
