--- a/app/src/main/res/drawable/background_card_department_main.xml
+++ b/app/src/main/res/drawable/background_card_department_main.xml
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <solid android:color="@color/theme"/>
-    <stroke android:width="3dp" android:color="@color/theme"/>
     <corners android:radius="20dp"/>
     <padding android:left="0dp" android:top="0dp" android:right="0dp" android:bottom="0dp" />
+    <gradient
+        android:startColor="@color/green"
+        android:endColor="@color/black"
+        android:angle="45"/>
 </shape>
