--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -90,7 +90,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
                     android:layout_marginBottom="5dp"
-                    android:background="@color/black"
+                    android:background="@color/theme"
                     android:text="Login"
                     android:textColor="@color/white"
                     android:textSize="18dp"
