- Event Date Picker

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -49,7 +49,7 @@
             android:layout_marginRight="10dp"/>
 
         <Button
-            android:id="@+id/button_submit"
+            android:id="@+id/button_reset"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:background="@color/theme"
