--- a/app/src/main/res/layout/activity_add_post.xml
+++ b/app/src/main/res/layout/activity_add_post.xml
@@ -33,11 +33,11 @@
             <Button
                 android:id="@+id/post_content"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="55dp"
                 android:layout_alignParentEnd="true"
                 android:layout_margin="5dp"
-                android:background="@drawable/post_button"
-                android:text="Post" />
+                android:text="Post"
+                app:cornerRadius="25dp"/>
 
         </RelativeLayout>
 
