--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="grey_post">#787878</color>
+    <color name="light_grey">#D3D3D3</color>
     <color name="theme">#FFC2A165</color>
     <color name="green">#FF214F1C</color>
 </resources>
