--- a/app/src/main/res/layout/card_event.xml
+++ b/app/src/main/res/layout/card_event.xml
@@ -1,6 +1,118 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:layout_marginVertical="3dp"
+    android:layout_marginHorizontal="4dp"
+    android:background="@drawable/background_card_event"
+    android:elevation="6dp"
+    android:padding="10dp">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="5dp">
+        <TextView
+            android:id="@+id/event_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Event Name"
+            android:textColor="@color/white"
+            android:textSize="20sp"
+            android:paddingHorizontal="10dp"
+            android:gravity="center"
+            android:textAllCaps="true"
+            android:layout_marginVertical="5dp"/>
+        <LinearLayout
+            android:id="@+id/linear_layout_event_date_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@+id/event_name"
+            android:gravity="center">
+            <TextView
+                android:id="@+id/event_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00 MMM 0000"
+                android:layout_marginHorizontal="10dp"
+                android:textColor="@color/white"
+                android:textSize="18sp" />
+            <TextView
+                android:id="@+id/event_time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="00:00 am"
+                android:layout_marginHorizontal="10dp"
+                android:textColor="@color/white"
+                android:textSize="18sp"/>
+        </LinearLayout>
+        <TextView
+            android:id="@+id/event_desc"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/linear_layout_event_date_time"
+            android:text="kdbv jkvjx kl dlkfv k vknfkvndkjfvn"
+            android:textSize="16sp"
+            android:textColor="@color/white"/>
+
+        <LinearLayout
+            android:id="@+id/linear_layout_poster_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@+id/event_desc"
+            android:layout_marginTop="2dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Posted by : "
+                android:textColor="@color/white"
+                android:textStyle="italic"/>
+            <TextView
+                android:id="@+id/poster_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Poster Name"
+                android:textColor="@color/white"
+                android:textStyle="italic"/>
+            <TextView
+                android:id="@+id/poster_dept"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="  (Poster Department)"
+                android:textColor="@color/white"
+                android:textStyle="italic"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/date_and_time_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_below="@+id/linear_layout_poster_info">
+
+            <TextView
+                android:id="@+id/time"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="5:16 am"
+                android:textColor="@color/white"/>
+
+            <TextView
+                android:layout_marginHorizontal="4dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/inter_punct"
+                android:textColor="@color/white"/>
+
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="22 Apr 22"
+                android:textColor="@color/white"/>
+        </LinearLayout>
+    </RelativeLayout>
+</RelativeLayout>
