--- a/app/src/main/res/layout/fragment_campus.xml
+++ b/app/src/main/res/layout/fragment_campus.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#FFF">
+    android:background="@color/white">
 
     <TextView
         android:id="@+id/empty_feed"
@@ -26,12 +26,9 @@
         android:layout_gravity="bottom|end"
         android:layout_marginRight="30dp"
         android:layout_marginBottom="30dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
         android:backgroundTint="@color/theme"
         android:clickable="true"
         app:srcCompat="@drawable/ic_post"
         app:borderWidth="0dp"
         app:elevation="10dp"/>
-
 </FrameLayout>
