--- a/app/src/main/res/layout/fragment_events.xml
+++ b/app/src/main/res/layout/fragment_events.xml
@@ -1,31 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#FFF">
+    android:background="@color/white">
 
     <TextView
+        android:id="@+id/empty_feed"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Events Fragment"
+        android:layout_gravity="center"
+        android:text="No post made yet"
         android:textSize="30sp"
-        android:layout_centerInParent="true" />
+        android:visibility="gone"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/content_recycler_event"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_post"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
         android:layout_marginRight="30dp"
         android:layout_marginBottom="30dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
+        android:layout_gravity="bottom|end"
         android:backgroundTint="@color/theme"
         android:clickable="true"
         app:srcCompat="@drawable/ic_post"
         app:borderWidth="0dp"
         app:elevation="10dp"/>
-
-
-</RelativeLayout>
+</FrameLayout>
