--- a/app/src/main/res/layout/activity_main_student.xml
+++ b/app/src/main/res/layout/activity_main_student.xml
@@ -13,17 +13,16 @@
         android:layout_above="@+id/bottom_navigation" >
 
         <TextView
-            android:id="@+id/emptyFeed"
+            android:id="@+id/empty_feed"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="20dp"
-            android:visibility="gone"
-            android:text="No post yet"
-            android:textSize="20dp"/>
+            android:layout_gravity="center"
+            android:text="No post made yet"
+            android:textSize="30sp"
+            android:visibility="gone"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/contentRecycler"
+            android:id="@+id/content_recycler"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
     </FrameLayout>
@@ -35,11 +34,4 @@
         android:layout_alignParentBottom="true"
         app:menu="@menu/bottom_navigation"
         android:background="?android:attr/windowBackground"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
-    </androidx.recyclerview.widget.RecyclerView>
-
 </RelativeLayout>
