- Faculty Module Database data store and r

--- a/app/src/main/res/layout/activity_add_post_faculty.xml
+++ b/app/src/main/res/layout/activity_add_post_faculty.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddPostCampusActivity">
+    tools:context=".AddPostFacultyActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -60,7 +60,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="12dp"
                 android:layout_marginRight="10dp"
-                android:hint="Campus"
+                android:hint="Faculties"
                 android:textColor="@color/black"
                 android:textSize="20sp"/>
         </LinearLayout>
@@ -75,10 +75,7 @@
             android:gravity="start"
             android:padding="10dp"
             android:textColorHint="@color/grey_post" />
-
-
     </LinearLayout>
-
 
     <TextView
         android:id="@+id/post_log"
