- Create new group by Faculty

--- a/app/src/main/res/layout/custom_layout_create_group.xml
+++ b/app/src/main/res/layout/custom_layout_create_group.xml
@@ -8,11 +8,11 @@
     android:layout_height="match_parent">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/text_input_m"
+        android:id="@+id/text_input_group_name"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Enter the group link"
+        android:hint="Enter the Group Name"
         android:layout_marginTop="15dp">
 
         <com.google.android.material.textfield.TextInputEditText
