--- a/app/src/main/res/layout/activity_department_main_feed.xml
+++ b/app/src/main/res/layout/activity_department_main_feed.xml
@@ -25,14 +25,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginRight="30dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="30dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
         android:backgroundTint="@color/theme"
         android:clickable="true"
         app:srcCompat="@drawable/ic_post"
         app:borderWidth="0dp"
-        app:elevation="10dp"/>
-
+        app:elevation="10dp"
+        android:focusable="true" />
 </FrameLayout>
