--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -19,22 +19,23 @@
         android:padding="16dp">
 
         <ImageView
+            android:id="@+id/back_from_profile"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_gravity="start"
             android:padding="10dp"
-            android:src="@drawable/ic_arrow_back_24dp"
-            android:layout_gravity="start"/>
+            android:src="@drawable/ic_arrow_back_24dp" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginRight="40dp"
+            android:gravity="center"
             android:text="Profile"
             android:textColor="@color/white"
             android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_marginRight="40dp"
-            android:layout_gravity="center"
-            android:gravity="center"/>
+            android:textStyle="bold" />
     </LinearLayout>
 
     <ScrollView
