--- a/app/src/main/res/menu/three_dot_menu.xml
+++ b/app/src/main/res/menu/three_dot_menu.xml
@@ -7,16 +7,15 @@
         android:title="Profile"
         app:showAsAction="ifRoom"/>
 
-    <item android:id="@+id/aboutUs"
+    <item android:id="@+id/about_us"
         android:title="About Us"
         app:showAsAction="never" />
 
-    <item android:id="@+id/talkMode"
+    <item android:id="@+id/talk_mode"
         android:title="Talk Mode"
         app:showAsAction="never" />
 
-    <item android:id="@+id/logOut"
+    <item android:id="@+id/log_out"
         android:title="Log Out"
         app:showAsAction="never" />
-
 </menu>
