--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -60,20 +60,29 @@
                 android:orientation="vertical"
                 android:padding="16dp">
 
-                <androidx.cardview.widget.CardView
-                    android:layout_width="150dp"
-                    android:layout_height="90dp"
-                    app:cardCornerRadius="6dp"
-                    app:cardElevation="0dp">
+                <RelativeLayout
+                    android:layout_width="120dp"
+                    android:layout_height="120dp">
 
-                    <ImageView
+                    <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/profile_pic"
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:layout_gravity="center"
+                        android:layout_width="120dp"
+                        android:layout_height="120dp"
+                        android:layout_centerInParent="true"
                         android:scaleType="centerCrop"
                         android:src="@drawable/ic_profile" />
-                </androidx.cardview.widget.CardView>
+
+                    <ImageButton
+                        android:id="@+id/choose_image"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentBottom="true"
+                        android:background="@color/theme"
+                        android:src="@drawable/ic_camera_40"
+                        android:layout_marginEnd="5dp"
+                        android:layout_marginBottom="5dp"/>
+                </RelativeLayout>
 
                 <LinearLayout
                     android:layout_width="wrap_content"
